posiGen_FullsendBox/src/objects/PM_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Business_Installation_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Installation Stage</label>
        <referenceTo>Business_Stage__c</referenceTo>
        <relationshipLabel>PM Stages</relationshipLabel>
        <relationshipName>PM_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Status</label>
        <referenceTo>Business_Status__c</referenceTo>
        <relationshipLabel>PM Stages</relationshipLabel>
        <relationshipName>PM_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Tool_V2__c</fullName>
        <label>PM Tool V2</label>
        <referenceTo>PM_Tool_V2__c</referenceTo>
        <relationshipLabel>PM Stages</relationshipLabel>
        <relationshipName>PM_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PM Stage</label>
    <nameField>
        <displayFormat>Stage-{000000}</displayFormat>
        <label>PM Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>